# framework

./: .clang-format  .gitignore  CMakeLists.txt  Makefile
cmake/modules/: CMakeSettings.cmake  CompilerSettings.cmake  GenerateHeaders.cmake  InstallDirs.cmake  Library.cmake  MarkNonGuiExecutable.cmake  Plugin.cmake  Test.cmake
scripts/: codingstyle.sh  cppcheck.sh  gcovr  pmd-cpd.sh  sloccount.sh
src/: CMakeLists.txt
src/Controller/: CMakeLists.txt  FlugsControllerConfig.cmake.in  controller.cpp  controller.h  mux.cpp  mux.h
src/Controller/params/: bodyparam.cpp  bodyparam.h  formparam.cpp  formparam.h  headerparam.cpp  headerparam.h  param.cpp  param.h  pathparam.cpp  pathparam.h  queryparam.cpp  queryparam.h
src/Controller/result/: contentresult.cpp  contentresult.h  result.cpp  result.h
src/Controller/tests/: CMakeLists.txt
src/Foundation/: CMakeLists.txt  FlugsFoundationConfig.cmake.in  abstracthttpparser.cpp  abstracthttpparser.h  connection.cpp  connection.h  global.cpp  global.h  header.cpp  header.h  headers.cpp  headers.h  message.cpp  message.h  method.cpp  method.h  middleware.cpp  middleware.h  request.cpp  request.h  response.h  server.cpp  server.h  status.cpp  status.h  stringutils.cpp  stringutils.h
src/Foundation/tests/: CMakeLists.txt  headerstest.cpp  headertest.cpp  statustest.cpp
src/HttpServer/: CMakeLists.txt  FlugsHttpServerConfig.cmake.in  httpserver.cpp  httpserver.h  httpserverconnection.cpp  httpserverconnection.h  httpserverconnection_p.h  httpserverplugin.cpp  httpserverplugin.h  httpserverresponse.cpp  httpserverresponse.h  qmldir
src/HttpServer/tests/: CMakeLists.txt
src/Middleware/: CMakeLists.txt  FlugsMiddlewareConfig.cmake.in  auth.cpp  auth.h  cors.cpp  cors.h  csrf.cpp  csrf.h  delay.h  gzip.cpp  gzip.h  panic.cpp  panic.h  prefixstrip.cpp  prefixstrip.h  secure.cpp  secure.h  static.cpp  static.h  throttle.cpp  throttle.h  xhttpmethodoverride.cpp  xhttpmethodoverride.h
src/Middleware/tests/: CMakeLists.txt
src/Router/: CMakeLists.txt  FlugsRouterConfig.cmake.in  path.cpp  path.h  route.cpp  route.h  route_p.h  routebuilder.cpp  routebuilder.h  router.cpp  router.h  router_p.h  scope.cpp  scope.h  scope_p.h
src/Router/tests/: CMakeLists.txt
tests/: CMakeLists.txt  headerstest.cpp  statustest.cpp
